--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2085,7 +2085,7 @@ header.style-1.sticky {
   box-sizing: border-box;
   background-color: var(--white-color);
   box-shadow: 5px 3px 40px rgba(0, 72, 88, 0.1);
-  z-index: 99999999;
+  z-index:1000;
 
 }
 @keyframes smooth-header {
